[project]
name = "agentic-resume-backend"
version = "0.1.0"
description = "Backend for the Agentic Resume Builder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.20",
    "langchain-core>=0.2.0",
    "openai>=1.40.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
